# blindfold

./: :Q  .gitignore  Cargo.toml  README.md  license.txt  requirements.md
.github/workflows/: rust.yml
src/: cli.rs  client.rs  constants.rs  lib.rs  log.rs  main.rs  output.rs  service.rs  test.rs  typo.rs
tests/: test_cli.rs  test_client.rs  test_output.rs  test_typo.rs
