[package]
name = "blindfold"
version = "1.0.7"
authors = ["Eóin McMahon <eoin.mcmahon.dev@gmail.com>"]
edition = "2018"
description ="⚙️ gitignore file generator written in rust"
repository = "https://github.com/Eoin-McMahon/blindfold"
readme="README.md"
license-file="LICENSE"
keywords=["gitignore", "git", "generator"]
categories=["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
term_size  = { version = "0.3.2"}

reqwest = { version = "0.12.20", features = ["json", "rustls-tls"] }
async-trait = "0.1" 
